syntax = "proto3";

package warehouse;

option go_package = "api/warehousepb";

message Product {
  int32 id = 1;
  string name = 2;
  float price = 3;

  message Article {
    int32 id = 1;
    int32 quantity = 2;
  }
  repeated Article articles = 4;

  int32 stock = 5;
}

service WarehouseService {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {
  }
  rpc RemoveProduct(RemoveProductRequest) returns (RemoveProductResponse) {
  }
}

message GetProductsRequest {}

message GetProductsResponse {
  repeated Product items = 1;
}

message RemoveProductRequest {
  int32 id = 1;
}

message RemoveProductResponse {}
